--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,6 @@ body {
 
 a {
   font-family: var(--font-roboto);
-  font-style: normal;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -81,7 +80,6 @@ header{
   line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--iris-color);
-  text-align: left;
   margin: 0;
   padding: 24px 76px 0 156px;
 }
@@ -90,9 +88,20 @@ header{
   color: var(--navy-color);  
 }
 
+.header-list-link-el{
+  font-weight: 500;
+  color: var(--navy-color);
+}
+
+.header-list-link-el:hover,
+.header-list-link-el:focus{
+  color: var(--ocean-color);
+}
+
 .header-phone,
 .header-mail{
   color: var(--slate-color);
+  font-style: normal;
 }
 
 .header-phone:hover,
