--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ h2{
   font-weight: 700;
   font-size: 36px;
   letter-spacing: 0.02em;
+  color: var(--navy-color);
 }
 
 h3{
@@ -173,6 +174,7 @@ footer{
 
 .index-our-strength{
   width: 264px;
+  line-height: 1.2;
 }
 
 .index-our-strength-title{
