--- a/css/style.css
+++ b/css/style.css
@@ -28,11 +28,11 @@ body {
   text-align: center;
 }
 
-.link{
+.link {
   text-decoration: none;
 }
 
-.list{
+.list {
   list-style-type: none;
 }
 
@@ -44,7 +44,7 @@ a {
   text-align: left;
 }
 
-h1{
+h1 {
   color: var(--white-color);
   font-weight: 700;
   font-size: 56px;
@@ -52,14 +52,14 @@ h1{
   letter-spacing: 0.02em;
 }
 
-h2{
+h2 {
   font-weight: 700;
   font-size: 36px;
   letter-spacing: 0.02em;
   color: var(--navy-color);
 }
 
-h3{
+h3 {
   font-weight: 500;
   font-size: 20px;
   letter-spacing: 0.02em;
@@ -67,13 +67,13 @@ h3{
 
 /* header */
 
-header{
+header {
   color: var(--navy-color);
   text-align: left;
   /* height: 72px; */
 }
 
-.logo-header{
+.logo-header {
   text-transform: uppercase;
   font-family: var(--font-raleway);
   font-weight: 800;
@@ -85,31 +85,30 @@ header{
   padding: 24px 76px 0 156px;
 }
 
-.logo-header-studio{
-  color: var(--navy-color);  
+.logo-header-studio {
+  color: var(--navy-color);
 }
 
-.header-list-link-el{
+.header-list-link-el {
   font-weight: 500;
   color: var(--navy-color);
 }
 
 .header-list-link-el:hover,
-.header-list-link-el:focus{
+.header-list-link-el:focus {
   color: var(--ocean-color);
 }
 
-.header-address{
+.header-address {
   font-style: normal;
 }
 
-.header-address-link{
+.header-address-link {
   color: var(--slate-color);
-  
 }
 
 .header-address-link:hover,
-.header-address-link:focus{
+.header-address-link:focus {
   color: var(--ocean-color);
 }
 
@@ -132,7 +131,7 @@ header{
   color: var(--iris-color);
 }
 
-footer{
+footer {
   background-color: var(--navy-color);
   color: var(--cloud-color);
   padding: 100px 0 100px 156px;
@@ -143,17 +142,17 @@ footer{
 
 /* Style for index page */
 
-.index-order-services{
+.index-order-services {
   background-color: var(--navy-color);
   height: 600px;
 }
 
-.index-order-services-title{
+.index-order-services-title {
   margin: 0;
   padding: 188px 472px 48px 472px;
 }
 
-.index-order-services-button{
+.index-order-services-button {
   width: 170px;
   font-family: inherit;
   height: 56px;
@@ -168,59 +167,66 @@ footer{
 }
 
 .index-order-services-button:hover,
-.index-order-services-button:focus{
+.index-order-services-button:focus {
   background-color: var(--ocean-color);
 }
 
 /* 2 section index */
 
-.index-our-strength{
+.index-our-strength {
   width: 264px;
 }
 
-.index-our-strength-title{
+.index-our-strength-title {
   display: none;
   line-height: 1.2;
   color: var(--navy-color);
 }
 
-.index-our-strength-list-title{
+.index-our-strength-list-title {
   line-height: 1.2;
   color: var(--navy-color);
 }
 
-.index-our-strength-text{
+.index-our-strength-text {
   line-height: 1.5;
   text-align: left;
 }
 
 /* 3 section index */
 
-.index-what-we-title{
+.index-what-we-title,
+.index-our-team-title {
   line-height: 1.11;
   text-transform: capitalize;
 }
 
 /* 4 section index */
 
-.index-our-team{
+.index-our-team {
   background-color: var(--cloud-color);
 }
 
-.index-our-team-list-el{
+.index-our-team-list-el {
   background-color: var(--white-color);
   width: 264px;
   height: 380px;
 }
+
+.index-our-team-list-title {
+  line-height: 1.2;
+  color: var(--navy-color);
+}
+
 /* Style for portfolio page */
 
 .portfolio-button-list,
 .portfolio-elements-list,
-.portfolio-elements-list-list{
+.portfolio-elements-list-list {
   list-style-type: none;
 }
 
-.portfolio-button-button{
+.portfolio-button-button {
   background-color: var(--cloud-color);
   color: var(--iris-color);
   font-weight: 500;
@@ -229,36 +235,36 @@ footer{
 }
 
 .portfolio-button-button:hover,
-.portfolio-button-button:focus{
+.portfolio-button-button:focus {
   background-color: var(--ocean-color);
-  color: var(--white-color)
+  color: var(--white-color);
 }
 
-.portfolio-button-button-all{
+.portfolio-button-button-all {
   width: 70px;
 }
 
-.portfolio-button-button-web{
+.portfolio-button-button-web {
   width: 116px;
 }
 
-.portfolio-button-button-app{
+.portfolio-button-button-app {
   width: 78px;
 }
 
-.portfolio-button-button-design{
+.portfolio-button-button-design {
   width: 102px;
 }
 
-.portfolio-button-button-marketing{
+.portfolio-button-button-marketing {
   width: 126px;
 }
 
 .portfolio-elements-title,
-.portfolio-button-title{
+.portfolio-button-title {
   display: none;
 }
 
-.portfolio-elements-list-list{
+.portfolio-elements-list-list {
   text-align: left;
 }
