--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  width: 1440px;
+  /* width: 1440px; */
   text-align: center;
 }
 
@@ -41,7 +41,7 @@ a {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  text-align: left;
+  /* text-align: left; */
 }
 
 h1 {
@@ -69,7 +69,7 @@ h3 {
 
 header {
   color: var(--navy-color);
-  text-align: left;
+  /* text-align: left; */
   /* height: 72px; */
 }
 
@@ -82,7 +82,7 @@ header {
   letter-spacing: 0.03em;
   color: var(--iris-color);
   margin: 0;
-  padding: 24px 76px 0 156px;
+  /* padding: 24px 76px 0 156px; */
 }
 
 .logo-header-studio {
@@ -116,10 +116,10 @@ header {
 
 .footer {
   background-color: var(--navy-color);
-  padding: 100px 0 100px 156px;
+  /* padding: 100px 0 100px 156px; */
   margin: 0;
   letter-spacing: 0.04em;
-  text-align: left;
+  /* text-align: left; */
 }
 
 .logo-footer {
@@ -130,9 +130,9 @@ header {
   font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.03em;
-  text-align: left;
-  margin: 0;
-  padding: 0;
+  /* text-align: left; */
+  /* margin: 0; */
+  /* padding: 0; */
 }
 
 .logo-footer-studio {
@@ -148,23 +148,23 @@ header {
 
 .index-order-services {
   background-color: var(--navy-color);
-  height: 600px;
+  /* height: 600px; */
 }
 
 .index-order-services-title {
   margin: 0;
-  padding: 188px 472px 48px 472px;
+  /* padding: 188px 472px 48px 472px; */
 }
 
 .index-order-services-button {
-  width: 170px;
+  /* width: 170px; */
   font-family: inherit;
-  height: 56px;
+  /* height: 56px; */
   background-color: var(--iris-color);
   color: var(--white-color);
   font-weight: 500;
   font-size: 16px;
-  border-radius: 4px;
+  /* border-radius: 4px; */
   line-height: 1.5;
   letter-spacing: 0.04em;
   cursor: pointer;
@@ -178,11 +178,11 @@ header {
 /* 2 section index */
 
 .index-our-strength {
-  width: 264px;
+  /* width: 264px; */
 }
 
 .index-our-strength-title {
-  display: none;
+  /* display: none; */
   line-height: 1.2;
   color: var(--navy-color);
 }
@@ -194,7 +194,7 @@ header {
 
 .index-our-strength-text {
   line-height: 1.5;
-  text-align: left;
+  /* text-align: left; */
 }
 
 /* 3 section index */
@@ -213,8 +213,8 @@ header {
 
 .index-our-team-list-el {
   background-color: var(--white-color);
-  width: 264px;
-  height: 380px;
+  /* width: 264px; */
+  /* height: 380px; */
 }
 
 .index-our-team-list-title {
@@ -229,7 +229,7 @@ header {
 /* Style for portfolio page */
 
 .portfolio-title {
-  display: none;
+  /* display: none; */
 }
 
 .portfolio-button-button {
@@ -238,8 +238,8 @@ header {
   color: var(--iris-color);
   font-size: 16px;
   font-weight: 500;
-  height: 48px;
-  border-radius: 4px;
+  /* height: 48px; */
+  /* border-radius: 4px; */
   line-height: 1.5;
   letter-spacing: 0.04em;
   cursor: pointer;
