--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   /* width: 1440px; */
-  text-align: center;
+  /* text-align: center; */
 }
 
 .link {
