--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ body {
 
 /* 4 section index */
 
-.index-our-team {
+.index-our-team-title {
   background-color: var(--cloud-color);
   font-weight: 700;
   font-size: 36px;
